--- a/CmsShop/Web.config
+++ b/CmsShop/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="Db" connectionString="Server=(LocalDB)\MSSQLLocalDB; AttachDbFilename=|DataDirectory|\CmsShop.mdf; Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="Db" connectionString="Server=(LocalDB)\MSSQLLocalDB;Integrated Security=True;AttachDbFilename=|DataDirectory|\CmsShop.mdf; " providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
